# Bookrium

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: app.rs  model.rs
db_wrapper/: Cargo.toml
db_wrapper/src/: create_library.sql  lib.rs  library.sql  sqlitedb.rs  surrealdb.rs
db_wrapper/src/csvdb/: client_db.rs
db_wrapper/src/sqlitedb/: librarydb.rs
db_wrapper/src/surrealdb/: client_db.rs  library_db.rs
file_io/: Cargo.toml
file_io/src/: file_io.rs  folder_scanner.rs  lib.rs  media_parser.rs
file_io/src/media_parser/: epub_parser.rs  pdf_parser.rs
gui/: CMakeLists.txt
gui/CXX-QT/: build.rs
gui/CXX-QT/qml/: main.qml
gui/CXX-QT/src/: cxxqt_object.rs
gui/QT/: CMakeLists.txt
gui/QT/cpp/: epubmodel.cpp  epubmodel.h  homemodel.cpp  homemodel.h  librarymodel.cpp  librarymodel.h  main.cpp  tocmodel.cpp  tocmodel.h
gui/QT/qml/: EpubReader.qml  HomeView.qml  HomeViewDelegate.qml  LibraryView.qml  LibraryViewDelegate.qml  NativeEpubReader.qml  main.qml  qml.qrc  resources.qrc
gui/QT/qml/web/: epubreader.html  epubreader.js
gui/QT/rust/cxx_layer/: Cargo.toml  build.rs
gui/QT/rust/cxx_layer/src/: client_cxx.rs  library_cxx.rs
gui/cpp/: librarymodel.cpp  librarymodel.h  mediamodel.cpp  mediamodel.h
gui/qml/: EpubReader.qml  LibraryView.qml  LibraryViewDelegate.qml  PDFReader.qml
gui/qml/web/: epubreader.html  epubreader.js
gui/rust/cxx_layer/: Cargo.toml  build.rs
gui/rust/cxx_layer/src/: client_cxx.rs  library_cxx.rs
library_types/: Cargo.toml
library_types/src/: epub_type.rs  home_types.rs  lib.rs
server/src/: lib.rs
