[package]
name = "db_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_types = { path = "../library_types" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
include-sqlite-sql = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
csv = "1.1.6"
lazy_static = "1.4.0"
[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
