[package]
name = "db_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_types = { path = "../library_types" }
uuid = "1.4.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
include-sqlite-sql = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.20"
